--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Mi primer sitio con Vagrant</title>
+  <meta charset="UTF-8">
+  <title>Proyecto de Fer Montero 🌸</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8fbff;
+      color: #023047;
+      text-align: center;
+      padding: 40px;
+    }
+    h1 {
+      color: #219ebc;
+    }
+    a {
+      color: #fb8500;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+  </style>
 </head>
 <body>
-  <h1>¡Hola desde Apache en la VM web!</h1>
-  <p>Este sitio está corriendo en la máquina virtual provisionada con Vagrant.</p>
-  <a href="info.php">Ver script en PHP</a>
+  <h1>Bienvenida al Proyecto de Fer Montero 🌸</h1>
+  <p>Este sitio web está corriendo dentro de una máquina virtual creada con <strong>Vagrant</strong>.</p>
+  <p><a href="info.php">Ver información de PHP</a> | <a href="db.php">Ver datos de la base de datos</a></p>
 </body>
 </html>
+
+
